--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="resources/fonts/font-awesome/css/font-awesome.min.css">
 		<title>Marius Sch&#x00e4;r</title>
+		<link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
 	</head>
 	<body>
 		Hello &#xf09b;
