--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 		<link rel="stylesheet" href="resources/fonts/font-awesome/css/font-awesome.min.css">
 		<title>Marius Sch&#x00e4;r</title>
 		<link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="style/reset.css">
+		<link rel="stylesheet" type="text/css" href="style/base.css">
 	</head>
 	<body>
-		Hello &#xf09b;
+		<header>
+			<div id="profile-picture">
+				<a href="/home"><img src="resources/img/face.jpg"></a>
+			</div>
+			<div id="title-container">
+				<h1>Marius Sch&#x00e4;r</h1>
+			</div>
+			<nav>
+				<ul>
+					<a href="https://blog.mariusschaer.ch"><li class="menu">&#xf1ea; blog</li></a>
+					<a href="https://github.com/martyschaer"><li class="menu">&#xf09b; github</li></a>
+					<a href="mailto:contact@mariusschaer.ch"><li class="menu">&#xf0e0; email</li></a>
+					<a href="/contact"><li class="menu">&#xf2bb; contact</li></a>
+				</ul>
+			</nav>
+		</header>
 	</body>
 </html>
 <!--
@@ -18,4 +35,7 @@ Char table:
 Ü 	&#x00dc;
 ü 	&#x00fc;
  	&#xf09b;
+ 	&#xf1ea;
+ 	&#xf0e0;
+ 	&#xf2bb;
 -->
