--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="style/reset.css">
 		<link rel="stylesheet" type="text/css" href="style/base.css">
+		<meta name="viewport" content="width=400, initial-scale=1">
 	</head>
 	<body>
 		<header>
