--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="refresh" content="0; url=/"/>
+		<meta name="viewport" content="width=400, initial-scale=1">
 	</head>
 	<body>
 		please wait while we redirect you
