--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 	<body>
 		<header>
 			<div id="profile-picture">
-				<a href="/home"><img src="resources/img/face.jpg"></a>
+				<a href="/"><img src="resources/img/face.jpg"></a>
 			</div>
 			<div id="title-container">
 				<h1>Marius Sch&#x00e4;r</h1>
 			</div>
 			<nav>
 				<ul>
-					<a href="https://blog.mariusschaer.ch"><li class="menu">&#xf1ea; blog</li></a>
-					<a href="https://github.com/martyschaer"><li class="menu">&#xf09b; github</li></a>
-					<a href="mailto:contact@mariusschaer.ch"><li class="menu">&#xf0e0; email</li></a>
-					<a href="/contact"><li class="menu">&#xf2bb; contact</li></a>
+					<a href="https://blog.mariusschaer.ch"><li class="menu"><span class="fa">&#xf1ea;</span> blog</li></a>
+					<a href="https://github.com/martyschaer"><li class="menu"><span class="fa">&#xf09b;</span> github</li></a>
+					<a href="mailto:contact@mariusschaer.ch"><li class="menu"><span class="fa">&#xf0e0;</span> email</li></a>
+					<a href="/contact"><li class="menu"><span class="fa">&#xf2bb;</span> contact</li></a>
 				</ul>
 			</nav>
 		</header>
@@ -39,4 +39,6 @@ Char table:
  	&#xf1ea;
  	&#xf0e0;
  	&#xf2bb;
+
+Surround in <span class="fa">...</span>
 -->
