configured blog subdomain redirect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<nav>
 				<ul>
-					<a href="https://blog.mariusschaer.ch"><li class="menu"><span class="fa">&#xf1ea;</span> blog</li></a>
+					<a href="/blog"><li class="menu"><span class="fa">&#xf1ea;</span> blog</li></a>
 					<a href="https://github.com/martyschaer"><li class="menu"><span class="fa">&#xf09b;</span> github</li></a>
 					<a href="mailto:contact@mariusschaer.ch"><li class="menu"><span class="fa">&#xf0e0;</span> email</li></a>
 					<a href="/contact"><li class="menu"><span class="fa">&#xf2bb;</span> contact</li></a>
