--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,44 @@
-here be blogs
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="resources/fonts/font-awesome/css/font-awesome.min.css">
+		<title>blog > Marius Sch&#x00e4;r</title>
+		<link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="style/reset.css">
+		<link rel="stylesheet" type="text/css" href="style/base.css">
+		<meta name="viewport" content="width=400, initial-scale=1">
+		<meta name="language" content="English">
+	</head>
+	<body>
+		<header>
+			<div id="profile-picture">
+				<a href="/"><img alt="picture of my face" src="resources/img/face.jpg"></a>
+			</div>
+			<div id="title-container">
+				<h1>Marius Sch&#x00e4;r</h1>
+			</div>
+			<nav>
+				<ul>
+					<a href="/blog" title="I might have opinions"><li class="menu"><span class="fa">&#xf1ea;</span> blog</li></a>
+					<a href="https://github.com/martyschaer" title="see my code"><li class="menu"><span class="fa">&#xf092;</span> github<span class="le">&#xf08e;</span></li></a>
+					<a href="mailto:contact@mariusschaer.ch" title="write me an email"><li class="menu"><span class="fa">&#xf0e0;</span> email<span class="le">&#xf08e;</span></li></a>
+					<a href="/contact" title="more contact information"><li class="menu"><span class="fa">&#xf2bb;</span> contact</li></a>
+				</ul>
+			</nav>
+		</header>
+		<div class="page-wrap">
+			blog content
+		</div>
+		<footer class="site-footer">
+			<br>
+			<ul id="social-icons">
+				<li class="fa" title="where I code"><a href="https://github.com/martyschaer">&#xf092;</a></li>
+				<li class="fa" title="where I complain about code"><a href="https://twitter.com/martyschaer">&#xf081;</a></li>
+				<li class="fa" title="pay for my coffee addiction"><a href="https://www.paypal.me/schaermarius/5">&#xf0f4;</a></li>
+				<li class="fa" title="don't really use this one much"><a href="https://plus.google.com/+MariusSchär">&#xf0d4;</a></li>
+				<li class="fa" title="Professionalism&#x2122;"><a href="https://www.linkedin.com/in/marius-sch&#x00e4;r/">&#xf08c;</a></li>
+			</ul>
+			<span id="snarky-comment">painstakingly crafted by hand&#x2122;</span>
+		</footer>
+	</body>
+</html>
