testing deploy system

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
 		</header>
 		<div class="page-wrap">
 			contact information
+			this was changed in the newest version!
 		</div>
 		<footer class="site-footer">
 			<br>
