changed blog content

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 			</nav>
 		</header>
 		<div class="page-wrap">
-			blog content this will have changed if the deployment went over smoothly
+			blog content 15:15
 		</div>
 		<footer class="site-footer">
 			<br>
