I gave up on automatic deployment

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 			</nav>
 		</header>
 		<div class="page-wrap">
-			blog content 15:15
+			blog 16:35
 		</div>
 		<footer class="site-footer">
 			<br>
@@ -38,7 +38,7 @@
 				<li class="fa" title="don't really use this one much"><a href="https://plus.google.com/+MariusSchär">&#xf0d4;</a></li>
 				<li class="fa" title="Professionalism&#x2122;"><a href="https://www.linkedin.com/in/marius-sch&#x00e4;r/">&#xf08c;</a></li>
 			</ul>
-			<span id="snarky-comment">painstakingly crafted by hand&#x2122;</span>
+			<span id="snarky-comment">painstakingly crafted by hand</span>
 		</footer>
 	</body>
 </html>
