--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 				<li class="fa" title="don't really use this one much"><a href="https://plus.google.com/+MariusSchär">&#xf0d4;</a></li>
 				<li class="fa" title="Professionalism&#x2122;"><a href="https://www.linkedin.com/in/marius-sch&#x00e4;r/">&#xf08c;</a></li>
 			</ul>
-			<span id="snarky-comment">painstakingly crafted by hand&#x2122;</span>
+			<span id="snarky-comment">painstakingly crafted by hand</span>
 		</footer>
 	</body>
 </html>
