updating redirect to fit blag

--- a/redirect_blog/index.html
+++ b/redirect_blog/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://mariusschaer.ch/blog"/>
+		<meta http-equiv="refresh" content="0; url=https://mariusschaer.ch/blag"/>
 		<meta name="viewport" content="width=400, initial-scale=1">
 	</head>
 	<body>
 		please wait while we redirect you
-		<a href="https://mariusschaer.ch/blog">click here if nothing happens</a>
+		<a href="https://mariusschaer.ch/blag">click here if nothing happens</a>
 	</body>
 </html>
