--- a/redirect_blog/index.html
+++ b/redirect_blog/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		please wait while we redirect you
-		<a href="https://mariusschaer.ch/blag">click here if nothing happens</a>
+		<a href="https://mariusschaer.ch/blog">click here if nothing happens</a>
 	</body>
 </html>
