--- a/redirect_blog/index.html
+++ b/redirect_blog/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://mariusschaer.ch/blag"/>
+		<meta http-equiv="refresh" content="0; url=https://mariusschaer.ch/blog"/>
 		<meta name="viewport" content="width=400, initial-scale=1">
 	</head>
 	<body>
