change GitHub to GitLab

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     </p>
     <h2>Contact</h2>
     <p>
-      You can find my in the places listed below. My open source projects are available on GitHub.
+      You can find my in the places listed below. My open source projects are available on GitLab.
     </p>
     <p>
       <b>Email:</b>    <a href="mailto:contact@mariusschaer.ch">contact@mariusschaer.ch</a><br/>
       <b>Twitter:</b>  <a href="https://twitter.com/martyschaer">@martyschaer</a><br/>
-      <b>GitHub:</b>   <a href="https://github.com/martyschaer">@martyschaer</a><br/>
+      <b>GitLab:</b>   <a href="https://gitlab.com/martyschaer">@martyschaer</a><br/>
       <b>Telegram:</b> <a href="https://telegram.me/martyschaer">@martyschaer</a>
     </p>
     <h2>How it's built</h2>
